Longpress button functionality

--- a/Prep/Prep/Base.lproj/Main.storyboard
+++ b/Prep/Prep/Base.lproj/Main.storyboard
@@ -460,6 +460,6 @@
         <image name="preplogo" width="650" height="883"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="qJE-tH-mdn"/>
+        <segue reference="VO9-bZ-EBk"/>
     </inferredMetricsTieBreakers>
 </document>
